--- a/style.css
+++ b/style.css
@@ -485,7 +485,7 @@
           position: fixed;
           top: 60px;
           right: -100%;
-          background-color: #333;
+          background-color: #fff;
           width: 70%;
           height: 100vh;
           flex-direction: column;
